fixed spacing between form, list & map

--- a/client/public/css/form.css
+++ b/client/public/css/form.css
@@ -253,7 +253,8 @@ button {
 #new-form {
   max-width: 280px;
   border: 11px solid #dcdcdc;
-  padding: 30px;
+  padding: 30px 0px 30px 30px;
+  margin: 30px 0px 30px 30px;
 }
 
 
@@ -274,9 +275,8 @@ button {
 
 .page-grid-container {
   display: grid;
-  grid-template-columns: repeat( auto-fit, minmax(75px, 1fr) );
-  grid-template-rows: repeat( auto-fit, minmax(50px, 1fr) );
-  grid-gap: 10px;
+  grid-template-columns: repeat( auto-fit, minmax(105px, 1fr) );
+  grid-gap: 2px;
   background-color: #2196F3;
   padding: 10px;
   width: 100%;
