--- a/client/public/css/list.css
+++ b/client/public/css/list.css
@@ -1,7 +1,7 @@
 #list-panel {
   max-height: 500px;
   max-height: 500px;
-  margin: 30px 0px 30px 30px;
+  margin: 0px 0px 30px 30px;
   border: 11px solid #dcdcdc;
 }
 #event-item {
