--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,5 +1,5 @@
 #mapid {
-  height: 563px;
+  height: 743px;
   overflow: hidden;
   margin: 30px;
   border: 11px solid #dcdcdc;
